<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#26a69a"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/textView2"
       android:layout_width="80dp"
       android:layout_height="40dp"
       android:gravity="end"
       android:paddingTop="6dp"
       android:paddingRight="10dp"
       android:paddingEnd="10dp"
       android:text="@string/km"
       android:textAlignment="textEnd"
       android:textColor="@color/black"
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="@+id/distance"
       app:layout_constraintEnd_toEndOf="@+id/distance"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintStart_toStartOf="@+id/distance"
       app:layout_constraintTop_toBottomOf="@+id/id_distance"
       app:layout_constraintVertical_bias="1.0"
       tools:ignore="RtlSymmetry" />

   <TextView
       android:id="@+id/id_consumption"
       android:layout_width="0dp"
       android:layout_height="22dp"
       android:text="@string/enter_consumption"
       android:textColor="@color/black"
       android:textSize="16sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toTopOf="@+id/consumption"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="1.0" />


   <EditText
       android:id="@+id/consumption"
       android:maxLength="10"
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:layout_marginTop="50dp"
       android:background="@drawable/custom_editext"
       android:inputType="number|numberDecimal"
       android:paddingStart="10dp"
       android:paddingLeft="10dp"
       android:textColor="@color/black"
       android:textColorHint="@color/black"
       android:textSize="20sp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:autofillHints="" />

   <TextView
       android:layout_width="80dp"
       android:layout_height="40dp"
       android:layout_marginStart="32dp"
       android:layout_marginLeft="32dp"
       android:text="@string/l_100km"
       android:textStyle="bold"
       android:textSize="18sp"
       android:textColor="@color/black"
       android:paddingTop="6dp"
       app:layout_constraintBottom_toBottomOf="@+id/consumption"
       app:layout_constraintEnd_toEndOf="@+id/consumption"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintStart_toStartOf="@+id/consumption"
       app:layout_constraintTop_toBottomOf="@+id/id_consumption"
       app:layout_constraintVertical_bias="0.0" />

   <TextView
       android:id="@+id/id_distance"
       android:layout_width="0dp"
       android:layout_height="22dp"
       android:text="@string/enter_distance"
       android:textColor="@color/black"
       android:textSize="16sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toTopOf="@+id/distance"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/consumption"
       app:layout_constraintVertical_bias="1.0" />

   <EditText
       android:id="@+id/distance"
       android:maxLength="10"
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:layout_marginTop="40dp"
       android:background="@drawable/custom_editext"
       android:inputType="number|numberDecimal"
       android:paddingLeft="10dp"
       android:textColor="@color/black"
       android:textColorHint="@color/black"
       android:textSize="20sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/consumption"
       android:autofillHints=""
       android:paddingStart="10dp" />


   <TextView
       android:layout_width="80dp"
       android:layout_height="40dp"
       android:paddingTop="6dp"
       android:paddingRight="10dp"
       android:text="@string/km"
       android:textColor="@color/black"
       android:textSize="18sp"
       android:textStyle="bold"
       android:textAlignment="textEnd"
       android:gravity="end"
       app:layout_constraintBottom_toBottomOf="@+id/distance"
       app:layout_constraintEnd_toEndOf="@+id/distance"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintStart_toStartOf="@+id/distance"
       app:layout_constraintTop_toBottomOf="@+id/id_distance" />

   <TextView
       android:id="@+id/enter_price"
       android:layout_width="0dp"
       android:layout_height="22dp"
       android:text="@string/enter_fuel_price"
       android:textColor="@color/black"
       android:textSize="16sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toTopOf="@+id/fuel_price"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/distance"
       app:layout_constraintVertical_bias="1.0" />

   <EditText
       android:id="@+id/fuel_price"
       android:maxLength="10"
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:layout_marginTop="40dp"
       android:background="@drawable/custom_editext"
       android:inputType="number|numberDecimal"
       android:paddingLeft="10dp"
       android:textColor="@color/black"
       android:textColorHint="@color/black"
       android:textSize="20sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/distance"
       android:autofillHints="" />

   <TextView
       android:layout_width="80dp"
       android:layout_height="40dp"
       android:gravity="end"
       android:paddingTop="6dp"
       android:paddingRight="10dp"
       android:text="@string/euro_l"
       android:textAlignment="textEnd"
       android:textColor="@color/black"
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="@+id/fuel_price"
       app:layout_constraintEnd_toEndOf="@+id/fuel_price"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintStart_toStartOf="@+id/fuel_price"
       app:layout_constraintTop_toBottomOf="@+id/enter_price" />

   <ImageButton
       android:id="@+id/imageButton"
       android:layout_width="108dp"
       android:layout_height="105dp"
       android:background="@drawable/button_shape"
       android:contentDescription="@string/recalculate"
       android:scaleType="fitXY"
       android:src="@drawable/button_image"
       android:textSize="18sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/button_reset"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintHorizontal_chainStyle="spread"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <Button
       android:id="@+id/button_reset"
       android:layout_width="108dp"
       android:layout_height="105dp"
       android:background="@drawable/button_shape2"
       android:gravity="left|center_vertical"
       android:text="@string/reset"
       android:textColor="@color/black"
       android:textSize="19sp"
       android:paddingLeft="20dp"
       app:backgroundTint="#8db596"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toEndOf="@+id/imageButton"
       app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>